# reactflow-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  evaluation.xml  pyproject.toml
.github/workflows/: ci.yml  refresh-data.yml  release.yml
scripts/: refresh_data.py
skills/using-reactflow-mcp/: README.md  SKILL.md
src/reactflow_mcp/: __init__.py  __main__.py  landing.py  prompts.py  renderers.py  scaffolders.py  server.py  templates.py  validators.py
src/reactflow_mcp/data/: api_catalog.py  deep_dive.md  migration.py  pro_examples.py  recipes.py  svelte_equivalents.py
tests/: test_api_catalog.py  test_migration.py  test_pro_examples.py  test_prompts.py  test_recipes.py  test_renderers.py  test_scaffolders.py  test_server.py  test_svelte_equivalents.py  test_templates.py  test_validators.py
