[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reactflow-mcp"
version = "0.1.0"
description = "MCP server giving LLMs first-class knowledge of React Flow (@xyflow/react) APIs, hooks, components, v11→v12 migration, and OSS/Pro feature surface."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "hvtuan" }]
requires-python = ">=3.10"
keywords = ["mcp", "model-context-protocol", "reactflow", "xyflow", "react-flow"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "pydantic>=2.7.0",
]

[project.scripts]
reactflow-mcp = "reactflow_mcp.__main__:main"

[project.urls]
Repository = "https://github.com/hvtuan/reactflow-mcp"

[tool.hatch.build.targets.wheel]
packages = ["src/reactflow_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"src/reactflow_mcp/data/deep_dive.md" = "reactflow_mcp/data/deep_dive.md"
